2010-04-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-buffer-active-p): renamed
	`twittering-buffer-related-p'.

2010-03-30  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-get-response-header): return nil
	if an empty line as a separater is not found in the given buffer.
	(twittering-http-default-sentinel): generate `header-info' only if
	`header' is non-nil.

2010-03-29  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-url-wrapper): new wrapper
	function for using URL library with proxy configuration for
	`twittering-mode'.
	(twittering-url-insert-file-contents): likewise.
	(twittering-url-retrieve-synchronously): likewise.
	(twittering-setup-proxy): call `url-scheme-get-property' to avoid
	`url-proxy-services' to be reset.
	(twittering-retrieve-image): use the wrapper function instead of
	a function in URL library.
	(twittering-tinyurl-get): likewise.

	* twittering-mode.el (twittering-update-status-from-minibuffer):
	fix infinite loop on updating a status from minibuffer.

	* twittering-mode.el (twittering-start-http-session-curl): modify
	the order of arguments for `curl', where the URL is placed last.

2010-03-25  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-get-status-url): change the
	format of a URL of a certain status into that used in the web
	interface on `http://twitter.com/'.

2010-03-24  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-register-process): store timeline
	spec string.
	(twittering-get-and-render-timeline): register a process together
	with timeline spec string.
	(twittering-release-process): use `delq' instead of `delete'.
	(twittering-get-timeline-spec-string-from-process): new function
	for registered timeline spec string.

	* twittering-mode.el (twittering-http-get-default-sentinel):
	display the timeline spec string in notification.

2010-03-23  Tadashi MATSUO  <tad@mymail.twin.jp>
